--- a/example/WallStreetLectures/ipython/lecture6_kelly_criteria.ipynb
+++ b/example/WallStreetLectures/ipython/lecture6_kelly_criteria.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 凯利公式 $f = \\frac{b·p - q}{b}$"
+    "### 凯利公式 $f = \\frac{bp - q}{b}$"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "outputs": [],
    "source": [
     "# 根据凯利公式计算最优下注比率\n",
-    "optimalRatio = (b  p - q)/b\n",
+    "optimalRatio = (b * p - q)/b\n",
     "\n",
     "ratio_list = [optimalRatio / 4.0, optimalRatio/ 2.0, optimalRatio*2.0, optimalRatio*4.0]\n",
     "#ratio_list = np.delete(ratio_list, [int(3.0-1)])\n",
