--- a/example/WallStreetLectures/ipython/lecture6_kelly_criteria.ipynb
+++ b/example/WallStreetLectures/ipython/lecture6_kelly_criteria.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 凯利公式 $f = \\frac{b·p - q}{b}$"
+    "### 凯利公式 $f = \\frac{bp - q}{b}$"
    ]
   },
   {
