inject quantos terminal environment variable phone = os.environ.get("QUANTOS_USER") token = os.environ.get("QUANTOS_TOKEN")

--- a/example/WallStreetLectures/ipython/lecture3_medianRet.ipynb
+++ b/example/WallStreetLectures/ipython/lecture3_medianRet.ipynb
@@ -26,21 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from jaqs.data.dataservice import RemoteDataService\n",
-    "from jaqs.data.dataview import DataView\n",
+    "from jaqs.data import RemoteDataService\n",
+    "from jaqs.data import DataView\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +46,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Begin: DataApi login 17321165656@tcp://data.tushare.org:8910\n",
+      "Begin: DataApi login 15900631541@tcp://data.tushare.org:8910\n",
       "    login success \n",
       "\n"
      ]
@@ -59,7 +57,7 @@
        "'0,'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,8 +70,10 @@
     "#   \"remote.data.username\":  '18688888888',\n",
     "#   \"remote.data.password\":  '23sdjfk209d0fs9dejkl2j3k4j9d0fsdf'}\n",
     "\n",
-    "phone = \"xxxx\"\n",
-    "token = \"xxxxxxxxxx\"\n",
+    "# 如果没有使用quantos金融终端，请自行替换phone,token内容\n",
+    "import os\n",
+    "phone = os.environ.get(\"QUANTOS_USER\")\n",
+    "token = os.environ.get(\"QUANTOS_TOKEN\")\n",
     "\n",
     "data_config = {\n",
     "  \"timeout\": 1800,\n",
@@ -96,10 +96,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# -------------------------------------------------------------------------------\n",
@@ -122,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -133,6 +131,8 @@
       "Query data...\n",
       "Query data - query...\n",
       "NOTE: price adjust method is [post adjust]\n",
+      "1062\n",
+      "1062\n",
       "Query data - daily fields prepared.\n",
       "Query instrument info...\n",
       "Query adj_factor...\n",
@@ -144,6 +144,18 @@
       "Query data...\n",
       "Query data - query...\n",
       "NOTE: price adjust method is [post adjust]\n",
+      "201\n",
+      "403\n",
+      "605\n",
+      "807\n",
+      "1009\n",
+      "1211\n",
+      "201\n",
+      "403\n",
+      "605\n",
+      "807\n",
+      "1009\n",
+      "1211\n",
       "Query data - daily fields prepared.\n",
       "Query instrument info...\n",
       "Query adj_factor...\n",
@@ -155,6 +167,28 @@
       "Query data...\n",
       "Query data - query...\n",
       "NOTE: price adjust method is [post adjust]\n",
+      "106\n",
+      "213\n",
+      "320\n",
+      "427\n",
+      "534\n",
+      "641\n",
+      "748\n",
+      "855\n",
+      "962\n",
+      "1069\n",
+      "1176\n",
+      "106\n",
+      "213\n",
+      "320\n",
+      "427\n",
+      "534\n",
+      "641\n",
+      "748\n",
+      "855\n",
+      "962\n",
+      "1069\n",
+      "1176\n",
       "Query data - daily fields prepared.\n",
       "Query instrument info...\n",
       "Query adj_factor...\n",
@@ -166,6 +200,82 @@
       "Query data...\n",
       "Query data - query...\n",
       "NOTE: price adjust method is [post adjust]\n",
+      "31\n",
+      "63\n",
+      "95\n",
+      "127\n",
+      "159\n",
+      "191\n",
+      "223\n",
+      "255\n",
+      "287\n",
+      "319\n",
+      "351\n",
+      "383\n",
+      "415\n",
+      "447\n",
+      "479\n",
+      "511\n",
+      "543\n",
+      "575\n",
+      "607\n",
+      "639\n",
+      "671\n",
+      "703\n",
+      "735\n",
+      "767\n",
+      "799\n",
+      "831\n",
+      "863\n",
+      "895\n",
+      "927\n",
+      "959\n",
+      "991\n",
+      "1023\n",
+      "1055\n",
+      "1087\n",
+      "1119\n",
+      "1151\n",
+      "1183\n",
+      "1215\n",
+      "31\n",
+      "63\n",
+      "95\n",
+      "127\n",
+      "159\n",
+      "191\n",
+      "223\n",
+      "255\n",
+      "287\n",
+      "319\n",
+      "351\n",
+      "383\n",
+      "415\n",
+      "447\n",
+      "479\n",
+      "511\n",
+      "543\n",
+      "575\n",
+      "607\n",
+      "639\n",
+      "671\n",
+      "703\n",
+      "735\n",
+      "767\n",
+      "799\n",
+      "831\n",
+      "863\n",
+      "895\n",
+      "927\n",
+      "959\n",
+      "991\n",
+      "1023\n",
+      "1055\n",
+      "1087\n",
+      "1119\n",
+      "1151\n",
+      "1183\n",
+      "1215\n",
       "Query data - daily fields prepared.\n",
       "Query instrument info...\n",
       "Query adj_factor...\n",
@@ -235,24 +345,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -347,7 +457,7 @@
        "Ashare_median  15.837937  36.908015  60.829493 -14.875100 -18.338202"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,30 +470,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
