--- a/example/WallStreetLectures/ipython/lecture4_candelstick.ipynb
+++ b/example/WallStreetLectures/ipython/lecture4_candelstick.ipynb
@@ -169,21 +169,21 @@
  "metadata": {
   "celltoolbar": "Raw Cell Format",
   "kernelspec": {
-   "display_name": "Py2.7 (venv_pytrade)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "venv_pytrade"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
