--- a/example/WallStreetLectures/ipython/lecture9_position_management.ipynb
+++ b/example/WallStreetLectures/ipython/lecture9_position_management.ipynb
@@ -77,8 +77,10 @@
     "#   \"remote.data.username\":  '18688888888',\n",
     "#   \"remote.data.password\":  '23sdjfk209d0fs9dejkl2j3k4j9d0fsdf'}\n",
     "\n",
-    "phone = \"xxxxxxxx\"\n",
-    "token = \"xxxxxxxx\"\n",
+    "# 如果没有使用quantos金融终端，请自行替换phone,token内容\n",
+    "import os\n",
+    "phone = os.environ.get(\"QUANTOS_USER\")\n",
+    "token = os.environ.get(\"QUANTOS_TOKEN\")\n",
     "\n",
     "data_config = {\n",
     "  \"timeout\": 1800,\n",
