--- a/example/WallStreetLectures/ipython/lecture8_volatility_calculation.ipynb
+++ b/example/WallStreetLectures/ipython/lecture8_volatility_calculation.ipynb
@@ -115,7 +115,7 @@
     "\n",
     "    \"\"\"\n",
     "    # get the trade date list between start_date and end_date\n",
-    "    dates = data_service.get_trade_date_range(start_date, end_date)\n",
+    "    dates = data_service.query_trade_dates(start_date, end_date)\n",
     "    symbols_list = []\n",
     "    move_list = []\n",
     "\n",
@@ -388,7 +388,7 @@
     "def scale_plot(dframe, symbol):\n",
     "    volList = []\n",
     "    for Nperiod in periodList:\n",
-    "        dframe['group'] = np.arange(len(dframe))/Nperiod\n",
+    "        dframe['group'] = (np.arange(len(dframe))/Nperiod).astype('int')\n",
     "        dframe_cum_ret = dframe.groupby('group')['log_ret'].sum()\n",
     "        vol = calc_vol(dframe_cum_ret)\n",
     "        volList.append(vol)\n",
