modify lecture samples

--- a/example/WallStreetLectures/ipython/lecture2_DemoStrategy.ipynb
+++ b/example/WallStreetLectures/ipython/lecture2_DemoStrategy.ipynb
@@ -4,18 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DemoStrategy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 视频中介绍了针对四只股票的等权重投资策略，本段代码展示了利用quantOS系统进行策略回测及仿真交易的具体步骤。\n",
-    "## 在程序运行之前，需要您在环境设置中更改以下参数：\n",
-    "## 1. 将YourPhoneNo.改为您在quantOS网站注册的手机号;\n",
-    "## 2. 将YourToken改为您的token;\n",
-    "## 3. 将YourStrategyNo.改为您的策略号。"
+    "# DemoStrategy\n",
+    "\n",
+    "## 视频中介绍了针对四只股票的等权重投资策略\n",
+    "## 本段代码展示了利用quantOS系统进行策略回测及仿真交易的具体步骤。"
    ]
   },
   {
@@ -27,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +27,8 @@
     "import time\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
+    "from jaqs.data import DataApi\n",
     "\n",
     "from jaqs.data import RemoteDataService\n",
     "from jaqs.trade import AlphaBacktestInstance\n",
@@ -51,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,18 +66,31 @@
     "token = os.environ.get(\"QUANTOS_TOKEN\")\n",
     "\n",
     "data_config = {\n",
-    "  \"remote.data.address\": \"tcp://data.tushare.org:8910\",\n",
+    "  \"remote.data.address\": \"tcp://data.quantos.org:8910\",\n",
     "  \"remote.data.username\":  phone,\n",
     "  \"remote.data.password\":  token}\n",
     "trade_config = {\n",
     "  \"remote.trade.address\": \"tcp://gw.quantos.org:8901\",\n",
     "  \"remote.trade.username\":  phone,\n",
-    "  \"remote.trade.password\":  token}\n",
-    "\n",
-    "\n",
-    "# 设置Strategy number\n",
+    "  \"remote.trade.password\":  token}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 修改自己的策略号（仿真交易使用）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 设置Strategy number, 根据自己的实际情况设置\n",
     "# 例如：StrategyNo = 1043\n",
-    "StrategyNo = '1611'"
+    "StrategyNo = 1008"
    ]
   },
   {
@@ -95,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,46 +218,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Begin: DataApi login 15900631541@tcp://data.tushare.org:8910\n",
-      "    Already login as 15900631541, skip init_from_config\n",
-      "Initialize config success.\n",
-      "Query data...\n",
-      "Query data - query...\n",
-      "NOTE: price adjust method is [post adjust]\n",
-      "Query data - daily fields prepared.\n",
-      "Query instrument info...\n",
-      "Query adj_factor...\n",
-      "Query groups (industry)...\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "No objects to concatenate",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-cab3276b71f6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 运行这里跑回测\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mtest_save_dataview\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mtest_alpha_strategy_dataview\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mtest_backtest_analyze\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-4-26714e6ef52a>\u001b[0m in \u001b[0;36mtest_save_dataview\u001b[1;34m()\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[0mdv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minit_from_config\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprops\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m     \u001b[0mdv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprepare_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[1;31m# set the benchmark\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mD:\\QuantosFinanceTerminal\\python\\lib\\site-packages\\jaqs\\data\\dataview.py\u001b[0m in \u001b[0;36mprepare_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    515\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mgroup_fields\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    516\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Query groups (industry)...\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 517\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_prepare_group\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgroup_fields\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    518\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    519\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Data has been successfully prepared.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mD:\\QuantosFinanceTerminal\\python\\lib\\site-packages\\jaqs\\data\\dataview.py\u001b[0m in \u001b[0;36m_prepare_group\u001b[1;34m(self, group_fields)\u001b[0m\n\u001b[0;32m    789\u001b[0m             df = self.data_api.query_industry_daily(symbol=','.join(self.symbol),\n\u001b[0;32m    790\u001b[0m                                                     \u001b[0mstart_date\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextended_start_date_q\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend_date\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mend_date\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 791\u001b[1;33m                                                     type_=type_, level=level)\n\u001b[0m\u001b[0;32m    792\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend_df\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfield\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mis_quarterly\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    793\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mD:\\QuantosFinanceTerminal\\python\\lib\\site-packages\\jaqs\\data\\dataservice.py\u001b[0m in \u001b[0;36mquery_industry_daily\u001b[1;34m(self, symbol, start_date, end_date, type_, level)\u001b[0m\n\u001b[0;32m    867\u001b[0m                    for sec, df in dic_sec.items()}\n\u001b[0;32m    868\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 869\u001b[1;33m         \u001b[0mdf_ann_tmp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[0msec\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'in_date'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0msec\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdic_sec\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    870\u001b[0m         df_value_tmp = pd.concat({sec: df.loc[:, 'industry{:d}_code'.format(level)]\n\u001b[0;32m    871\u001b[0m                                   for sec, df in dic_sec.items()},\n",
-      "\u001b[1;32mD:\\QuantosFinanceTerminal\\python\\lib\\site-packages\\pandas\\core\\reshape\\concat.py\u001b[0m in \u001b[0;36mconcat\u001b[1;34m(objs, axis, join, join_axes, ignore_index, keys, levels, names, verify_integrity, copy)\u001b[0m\n\u001b[0;32m    210\u001b[0m                        \u001b[0mkeys\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevels\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlevels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnames\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnames\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    211\u001b[0m                        \u001b[0mverify_integrity\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mverify_integrity\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 212\u001b[1;33m                        copy=copy)\n\u001b[0m\u001b[0;32m    213\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mop\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_result\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    214\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mD:\\QuantosFinanceTerminal\\python\\lib\\site-packages\\pandas\\core\\reshape\\concat.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, objs, axis, join, join_axes, keys, levels, names, ignore_index, verify_integrity, copy)\u001b[0m\n\u001b[0;32m    243\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    244\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobjs\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 245\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'No objects to concatenate'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    246\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    247\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mkeys\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: No objects to concatenate"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 运行这里跑回测\n",
     "test_save_dataview()\n",
@@ -273,12 +245,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from jaqs.trade.tradeapi import TradeApi"
+    "### 4.1 初始化交易API"
    ]
   },
   {
@@ -287,62 +257,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tapi = TradeApi(trade_config['remote.trade.address'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def on_orderstatus(order):\n",
-    "    print(\"on_orderstatus:\") #, order\n",
-    "    for key in order:    print(\"%20s : %s\" % (key, str(order[key])))\n",
-    "    print(\"\")\n",
+    "from jaqs.trade.tradeapi import TradeApi\n",
     "\n",
+    "tapi = TradeApi(trade_config['remote.trade.address'])\n",
     "\n",
-    "# 成交回报推送\n",
-    "def on_trade(trade):\n",
-    "    print(\"on_trade:\")\n",
-    "    for key in trade:    print(\"%20s : %s\" % (key, str(trade[key])))\n",
-    "    print(\"\")\n",
-    "\n",
-    "# 委托任务执行状态推送\n",
-    "# 通常可以忽略该回调函数\n",
-    "def on_taskstatus(task):\n",
-    "    print(\"on_taskstatus:\")\n",
-    "    for key in task:    print(\"%20s : %s\" % (key, str(task[key])))\n",
-    "    print(\"\")\n",
-    "\n",
-    "tapi.set_ordstatus_callback(on_orderstatus)\n",
-    "tapi.set_trade_callback(on_trade)\n",
-    "tapi.set_task_callback(on_taskstatus)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "user_info, msg = tapi.login(trade_config['remote.trade.username'], trade_config['remote.trade.password'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(user_info)\n",
+    "user_info, msg = tapi.login(trade_config['remote.trade.username'], trade_config['remote.trade.password'])\n",
     "tapi.use_strategy(StrategyNo)  #改成用户自己的 strategy号\n",
     "\n",
     "res, msg = tapi.query_account()\n",
-    "print(res)\n",
-    "\n",
     "money = res.loc[0, 'enable_balance']\n",
     "print(\"Balance we have: {}\".format(money))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.2 构造目标订单"
    ]
   },
   {
@@ -353,10 +284,15 @@
    },
    "outputs": [],
    "source": [
-    "dic_price      = {'600519.SH': 637.70,\n",
-    "                  '600036.SH': 28.72,\n",
-    "                  '601318.SH': 63.29,\n",
-    "                  '000651.SZ': 41.96}\n",
+    "data_api = DataApi(data_config['remote.data.address'])\n",
+    "user_info, msg = data_api.login(phone, token)\n",
+    "\n",
+    "quotes, msg = data_api.quote('600519.SH,600036.SH,601318.SH,000651.SZ')\n",
+    "\n",
+    "dic_price      = {'600519.SH': quotes['last']['600519.SH'],\n",
+    "                  '600036.SH': quotes['last']['600036.SH'],\n",
+    "                  '601318.SH': quotes['last']['601318.SH'],\n",
+    "                  '000651.SZ': quotes['last']['000651.SZ']}\n",
     "\n",
     "# 每只股票等金额投资，各买入30万元\n",
     "dic_shares = {k: 100 * np.floor(money * 0.012 * symbol_weights[k] / dic_price[k]/100) for k, _ in symbol_weights.items()}\n",
@@ -370,6 +306,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.3 发送订单买入股票"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -379,6 +322,23 @@
     "task_id, msg = tapi.place_batch_order(orders)\n",
     "print(task_id)\n",
     "print(msg)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.4 查询订单信息"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders, msg = tapi.query_order(task_id)\n",
+    "orders"
    ]
   },
   {
