--- a/example/WallStreetLectures/ipython/tk_technical_analysis.ipynb
+++ b/example/WallStreetLectures/ipython/tk_technical_analysis.ipynb
@@ -11,10 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 本段代码利用quantOS系统分析了几个常见技术信号有效性，我们选取了两个技术形态：三根阳\n",
-    "## 线，金叉死叉，以及一个技术指标：跳空高开。大致步骤如下：\n",
-    "## 1. 首先通过`add_formula`功能将信号用公式表达并计算，再加入到`DataView`中\n",
-    "## 2. 利用信号测试模块`jaqs.research.SignalDigger`分析信号有效性"
+    "### 本段代码利用quantOS系统分析了几个常见技术信号有效性，我们选取了两个技术形态：三根阳\n",
+    "线，金叉死叉，以及一个技术指标：跳空高开。大致步骤如下：\n",
+    "\n",
+    "\n",
+    "1.首先通过`add_formula`功能将信号用公式表达并计算，再加入到`DataView`中\n",
+    "\n",
+    "2.利用信号测试模块`jaqs.research.SignalDigger`分析信号有效性"
    ]
   },
   {
@@ -35,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,9 +91,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Begin: DataApi login 18612562791@tcp://data.tushare.org:8910\n",
+      "    login success \n",
+      "\n",
+      "Initialize config success.\n",
+      "Query data...\n",
+      "Query data - query...\n",
+      "NOTE: price adjust method is [post adjust]\n",
+      "201\n",
+      "403\n",
+      "605\n",
+      "807\n",
+      "1009\n",
+      "1211\n",
+      "201\n",
+      "403\n",
+      "605\n",
+      "807\n",
+      "1009\n",
+      "1211\n",
+      "Query data - daily fields prepared.\n",
+      "Query instrument info...\n",
+      "Query adj_factor...\n",
+      "Query benchmark...\n",
+      "Query benchmar member info...\n",
+      "Data has been successfully prepared.\n",
+      "\n",
+      "Store data...\n",
+      "Dataview has been successfully saved to:\n",
+      "C:\\Users\\jfang\\AppData\\Roaming\\QuantosFinanceTerminal\\workspace\\__lectures\\__primaryschool\\technical_analysis\n",
+      "\n",
+      "You can load it with load_dataview('C:\\Users\\jfang\\AppData\\Roaming\\QuantosFinanceTerminal\\workspace\\__lectures\\__primaryschool\\technical_analysis')\n"
+     ]
+    }
+   ],
    "source": [
     "# 选股范围和基准设为沪深300指数\n",
     "ds = RemoteDataService()\n",
@@ -118,11 +160,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\QuantosTerminal\\python\\lib\\site-packages\\jaqs\\data\\py_expression_eval.py:472: RuntimeWarning: invalid value encountered in greater\n",
+      "  res = arr > brr\n"
+     ]
+    }
+   ],
    "source": [
     "# 判断个股当前是否达到涨跌停限制：达到 = True， 未达到 = False\n",
     "dv.add_formula('mask_limit_reached', 'Abs((open - Delay(close, 1)) / Delay(close, 1)) > 0.095', is_quarterly=False)\n",
@@ -138,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,9 +234,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\QuantosTerminal\\python\\lib\\site-packages\\jaqs\\data\\py_expression_eval.py:608: FutureWarning: pd.rolling_mean is deprecated for DataFrame and will be removed in a future version, replace with \n",
+      "\tDataFrame.rolling(window=5,center=False).mean()\n",
+      "  return pd.rolling_mean(x, n)\n",
+      "D:\\QuantosTerminal\\python\\lib\\site-packages\\jaqs\\data\\py_expression_eval.py:608: FutureWarning: pd.rolling_mean is deprecated for DataFrame and will be removed in a future version, replace with \n",
+      "\tDataFrame.rolling(window=15,center=False).mean()\n",
+      "  return pd.rolling_mean(x, n)\n",
+      "D:\\QuantosTerminal\\python\\lib\\site-packages\\jaqs\\data\\py_expression_eval.py:481: RuntimeWarning: invalid value encountered in less\n",
+      "  res = arr < brr\n",
+      "D:\\QuantosTerminal\\python\\lib\\site-packages\\jaqs\\data\\py_expression_eval.py:472: RuntimeWarning: invalid value encountered in greater\n",
+      "  res = arr > brr\n"
+     ]
+    }
+   ],
    "source": [
     "# 定义快速均线(5天)和慢速均线(15天)\n",
     "dv.add_formula('fast_MA', 'Ts_Mean(close_adj, 5)', is_quarterly=False)\n",
@@ -213,7 +281,18 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nan Data Count (should be zero) : 0;  Percentage of effective data: 94%\n",
+      "Nan Data Count (should be zero) : 0;  Percentage of effective data: 94%\n",
+      "Nan Data Count (should be zero) : 0;  Percentage of effective data: 94%\n",
+      "Nan Data Count (should be zero) : 0;  Percentage of effective data: 93%\n"
+     ]
+    }
+   ],
    "source": [
     "signal = dv.get_ts('dark_cross').shift(1, axis=0)  # avoid look-ahead bias\n",
     "obj = SignalDigger(output_folder='technical_analysis', output_format='plot')\n",
