--- a/example/WallStreetLectures/ipython/lecture3_medianRet.ipynb
+++ b/example/WallStreetLectures/ipython/lecture3_medianRet.ipynb
@@ -11,10 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 本段代码展示了利用quantOS系统提取数据，并计算指数年收益率及指数成份股年收益率中位数的具体步骤。\n",
-    "## 在程序运行之前，需要您在环境设置中更改以下参数：\n",
-    "## 1. 将YourPhoneNo.改为您在quantOS网站注册的手机号;\n",
-    "## 2. 将YourToken改为您的token;"
+    "## 本段代码展示了利用quantOS系统提取数据，并计算指数年收益率及指数成份股年收益率中位数的具体步骤。"
    ]
   },
   {
@@ -26,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,36 +37,8 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Begin: DataApi login 15900631541@tcp://data.tushare.org:8910\n",
-      "    login success \n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'0,'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 设置服务器地址、用户名密码\n",
-    "# 例如：\n",
-    "# data_config = {\n",
-    "#   \"remote.data.address\": \"tcp://data.tushare.org:8910\",\n",
-    "#   \"remote.data.username\":  '18688888888',\n",
-    "#   \"remote.data.password\":  '23sdjfk209d0fs9dejkl2j3k4j9d0fsdf'}\n",
-    "\n",
     "# 如果没有使用quantos金融终端，请自行替换phone,token内容\n",
     "import os\n",
     "phone = os.environ.get(\"QUANTOS_USER\")\n",
@@ -77,7 +46,7 @@
     "\n",
     "data_config = {\n",
     "  \"timeout\": 1800,\n",
-    "  \"remote.data.address\": \"tcp://data.tushare.org:8910\",\n",
+    "  \"remote.data.address\": \"tcp://data.quantos.org:8910\",\n",
     "  \"remote.data.username\":  phone,\n",
     "  \"remote.data.password\":  token}\n",
     "\n",
@@ -105,9 +74,9 @@
     "# -------------------------------------------------------------------------------\n",
     "# 上证50， 沪深300，中证500，中证全指\n",
     "# indexList = ['000016.SH', '000300.SH', '000905.SH', '000985.CSI']\n",
-    "indexList = ['000016.SH', '000300.SH', '000905.SH', '000985.CSI']\n",
+    "indexList = ['000016.SH', '000300.SH', '000905.SH'] #'000985.CSI'\n",
     "retCompare = pd.DataFrame()\n",
-    "startdate = 20121231\n",
+    "startdate = 20151231\n",
     "enddate = 20171130"
    ]
   },
@@ -115,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. 分析步骤 (注：中证全指000985.CSI中成份股较多，此部分程序运行之间较长)"
+    "## 3. 分析步骤 (注：中证全指000985.CSI中成份股较多，此部分程序运行时间较长)"
    ]
   },
   {
@@ -131,8 +100,6 @@
       "Query data...\n",
       "Query data - query...\n",
       "NOTE: price adjust method is [post adjust]\n",
-      "1062\n",
-      "1062\n",
       "Query data - daily fields prepared.\n",
       "Query instrument info...\n",
       "Query adj_factor...\n",
@@ -144,18 +111,10 @@
       "Query data...\n",
       "Query data - query...\n",
       "NOTE: price adjust method is [post adjust]\n",
-      "201\n",
-      "403\n",
-      "605\n",
-      "807\n",
-      "1009\n",
-      "1211\n",
-      "201\n",
-      "403\n",
-      "605\n",
-      "807\n",
-      "1009\n",
-      "1211\n",
+      "249\n",
+      "499\n",
+      "249\n",
+      "499\n",
       "Query data - daily fields prepared.\n",
       "Query instrument info...\n",
       "Query adj_factor...\n",
@@ -167,28 +126,12 @@
       "Query data...\n",
       "Query data - query...\n",
       "NOTE: price adjust method is [post adjust]\n",
-      "106\n",
-      "213\n",
-      "320\n",
-      "427\n",
-      "534\n",
-      "641\n",
-      "748\n",
-      "855\n",
-      "962\n",
-      "1069\n",
-      "1176\n",
-      "106\n",
-      "213\n",
-      "320\n",
-      "427\n",
-      "534\n",
-      "641\n",
-      "748\n",
-      "855\n",
-      "962\n",
-      "1069\n",
-      "1176\n",
+      "142\n",
+      "285\n",
+      "428\n",
+      "142\n",
+      "285\n",
+      "428\n",
       "Query data - daily fields prepared.\n",
       "Query instrument info...\n",
       "Query adj_factor...\n",
@@ -215,29 +158,6 @@
       "415\n",
       "447\n",
       "479\n",
-      "511\n",
-      "543\n",
-      "575\n",
-      "607\n",
-      "639\n",
-      "671\n",
-      "703\n",
-      "735\n",
-      "767\n",
-      "799\n",
-      "831\n",
-      "863\n",
-      "895\n",
-      "927\n",
-      "959\n",
-      "991\n",
-      "1023\n",
-      "1055\n",
-      "1087\n",
-      "1119\n",
-      "1151\n",
-      "1183\n",
-      "1215\n",
       "31\n",
       "63\n",
       "95\n",
@@ -253,29 +173,6 @@
       "415\n",
       "447\n",
       "479\n",
-      "511\n",
-      "543\n",
-      "575\n",
-      "607\n",
-      "639\n",
-      "671\n",
-      "703\n",
-      "735\n",
-      "767\n",
-      "799\n",
-      "831\n",
-      "863\n",
-      "895\n",
-      "927\n",
-      "959\n",
-      "991\n",
-      "1023\n",
-      "1055\n",
-      "1087\n",
-      "1119\n",
-      "1151\n",
-      "1183\n",
-      "1215\n",
       "Query data - daily fields prepared.\n",
       "Query instrument info...\n",
       "Query adj_factor...\n",
@@ -369,9 +266,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th>trade_y</th>\n",
-       "      <th>2013</th>\n",
-       "      <th>2014</th>\n",
-       "      <th>2015</th>\n",
        "      <th>2016</th>\n",
        "      <th>2017</th>\n",
        "    </tr>\n",
@@ -379,65 +273,41 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>SZ50_index</th>\n",
-       "      <td>-15.228618</td>\n",
-       "      <td>63.931810</td>\n",
-       "      <td>-6.227466</td>\n",
        "      <td>-5.531327</td>\n",
        "      <td>25.210936</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SZ50_median</th>\n",
-       "      <td>-15.230643</td>\n",
-       "      <td>59.908578</td>\n",
-       "      <td>-3.185420</td>\n",
        "      <td>-7.682435</td>\n",
        "      <td>10.946135</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>HS300_index</th>\n",
-       "      <td>-7.646836</td>\n",
-       "      <td>51.659466</td>\n",
-       "      <td>5.583366</td>\n",
        "      <td>-11.281784</td>\n",
        "      <td>21.027236</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>HS300_median</th>\n",
-       "      <td>-6.487704</td>\n",
-       "      <td>44.434358</td>\n",
-       "      <td>12.456008</td>\n",
        "      <td>-15.269830</td>\n",
        "      <td>1.906094</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ZZ500_index</th>\n",
-       "      <td>16.888268</td>\n",
-       "      <td>39.007066</td>\n",
-       "      <td>43.116632</td>\n",
        "      <td>-17.775252</td>\n",
        "      <td>-0.003266</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ZZ500_median</th>\n",
-       "      <td>10.059198</td>\n",
-       "      <td>33.139987</td>\n",
-       "      <td>39.477668</td>\n",
        "      <td>-18.092379</td>\n",
        "      <td>-9.616558</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ashare_index</th>\n",
-       "      <td>5.213341</td>\n",
-       "      <td>45.824358</td>\n",
-       "      <td>32.558328</td>\n",
        "      <td>-14.405746</td>\n",
        "      <td>2.647241</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ashare_median</th>\n",
-       "      <td>15.837937</td>\n",
-       "      <td>36.908015</td>\n",
-       "      <td>60.829493</td>\n",
        "      <td>-14.875100</td>\n",
        "      <td>-18.338202</td>\n",
        "    </tr>\n",
@@ -446,15 +316,15 @@
        "</div>"
       ],
       "text/plain": [
-       "trade_y             2013       2014       2015       2016       2017\n",
-       "SZ50_index    -15.228618  63.931810  -6.227466  -5.531327  25.210936\n",
-       "SZ50_median   -15.230643  59.908578  -3.185420  -7.682435  10.946135\n",
-       "HS300_index    -7.646836  51.659466   5.583366 -11.281784  21.027236\n",
-       "HS300_median   -6.487704  44.434358  12.456008 -15.269830   1.906094\n",
-       "ZZ500_index    16.888268  39.007066  43.116632 -17.775252  -0.003266\n",
-       "ZZ500_median   10.059198  33.139987  39.477668 -18.092379  -9.616558\n",
-       "Ashare_index    5.213341  45.824358  32.558328 -14.405746   2.647241\n",
-       "Ashare_median  15.837937  36.908015  60.829493 -14.875100 -18.338202"
+       "trade_y             2016       2017\n",
+       "SZ50_index     -5.531327  25.210936\n",
+       "SZ50_median    -7.682435  10.946135\n",
+       "HS300_index   -11.281784  21.027236\n",
+       "HS300_median  -15.269830   1.906094\n",
+       "ZZ500_index   -17.775252  -0.003266\n",
+       "ZZ500_median  -18.092379  -9.616558\n",
+       "Ashare_index  -14.405746   2.647241\n",
+       "Ashare_median -14.875100 -18.338202"
       ]
      },
      "execution_count": 5,
