--- a/example/WallStreetLectures/ipython/lecture3_medianRet.ipynb
+++ b/example/WallStreetLectures/ipython/lecture3_medianRet.ipynb
@@ -333,7 +333,7 @@
     }
    ],
    "source": [
-    "retCompare.columns = ['SZ50_index', 'SZ50_median', 'HS300_index', 'HS300_median', 'ZZ500_index', 'ZZ500_median', 'Ashare_index', 'Ashare_median']\n",
+    "retCompare.columns = ['SZ50_index', 'SZ50_median', 'HS300_index', 'HS300_median', 'ZZ500_index', 'ZZ500_median']\n",
     "retCompare.T"
    ]
   },
